--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/app.ts",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/app.ts",
     "build": "npx tsc",
