--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.ts",
-  "type": "module",
+  "main": "dist/app.js",
   "scripts": {
     "dev": "nodemon src/app.ts",
     "build": "npx tsc",
-    "start": "node src/app.js"
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
