--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "dev": "nodemon src/app.ts",
+    "start": "nodemon src/app.ts",
     "build": "npx tsc",
-    "start": "node dist/app.js"
+    "dev": "ts-node dist/app.js"
   },
   "keywords": [],
   "author": "",
