--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "backend",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
-  "main": "dist/app.js",
+  "main": "src/app.js",
   "scripts": {
-    "dev": "nodemon src/app.ts",
-    "build": "npx tsc",
-    "start": "ts-node dist/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CrisTain333/menzilla-server.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "colors.ts": "^1.0.20",
-    "cors": "^2.8.5",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+  "bugs": {
+    "url": "https://github.com/CrisTain333/menzilla-server/issues"
   },
+  "homepage": "https://github.com/CrisTain333/menzilla-server#readme",
   "dependencies": {
-    "@types/cors": "^2.8.13",
-    "bcrypt": "^5.1.0",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.5",
+    "nodemon": "^2.0.22"
   }
 }
