--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
-    "nodemon": "^2.0.22"
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
