--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/CrisTain333/menzilla-server#readme",
   "dependencies": {
+    "@stripe/stripe-js": "^1.54.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.37.0",
@@ -32,8 +33,10 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
     "multer": "^1.4.5-lts.1",
+    "next": "^13.4.6",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "stripe": "^12.9.0"
   }
 }
