--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "sib-api-v3-sdk": "^8.5.0",
+    "socket.io": "^4.7.1",
     "stripe": "^12.9.0"
   }
 }
